<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_margin="20sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_log_out"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_log_out"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text="@string/log_out"/>

        <TextView
            android:id="@+id/txt_Cancel_LogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:text="@string/cancel"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>