<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:background="@drawable/dialog_top_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/title_details_order"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/dialog_bottom_bg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name_order"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/txt_Name_Detail_Order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phone_order2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"

                />
            <TextView
                android:id="@+id/txt_Phone_Detail_Order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:textSize="16sp"
                android:textColor="@color/black"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_address_order"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"

                />
            <TextView
                android:id="@+id/txt_Address_Detail_Order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="@color/black"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_status_order"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"

                />

            <Spinner
                android:id="@+id/spinner_status_Order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"

                />
        </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_list_order"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="16sp"
                />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_Detail_Order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_note_order"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txt_Note_Detail_Order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cart"
                android:textColor="@color/black"
                android:textSize="16sp"

                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/txt_Total_Order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textColor="#FF0303"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Cancel_Detail_Order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                app:backgroundTint= "@null"
                android:background="@drawable/cus_btn_cancel_manager"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn_Confirm_Detail_Order"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:background="@drawable/cus_btn_confirm_manager"
                app:backgroundTint= "@null"
                android:textColor="@color/black"
                android:text="@string/confirm"
                android:textStyle="bold"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>