<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:background="@drawable/dialog_top_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/add_food"
        />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/dialog_bottom_bg"
        >
        <ImageView
            android:id="@+id/img_AddFood"
            android:layout_marginTop="5dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_image"
            />
        <TextView
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_img_food"
            android:textSize="15sp"
            android:textColor="@color/black"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayout_NameFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            app:errorEnabled="true"
            app:hintEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_NameAddFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_add_food"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayout_PriceFood"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            app:hintEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_PriceAddFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_price_add_food"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayout_DescriptionFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            app:errorEnabled="true"
            app:hintEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_DescriptionAddFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_des_add_food"
                android:maxLines="1"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_CancelAddFood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                app:backgroundTint= "@null"
                android:background="@drawable/cus_btn_cancel_manager"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btn_ConfirmAddFood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@null"
                android:background="@drawable/cus_btn_confirm_manager"
                app:backgroundTint= "@null"
                android:textColor="@color/black"
                android:text="@string/confirm"
                android:textStyle="bold"
                android:layout_weight="1"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>